did blogs entry using long polling dispaly all blog to the from page